--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 Options -MultiViews
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.php [QSA,L]
+Redirect 301 / https://github.com/andresamayadiaz/FrontAccountingSimpleAPI
